--- a/myblog/posts/sr/studije/references.bib
+++ b/myblog/posts/sr/studije/references.bib
@@ -56,4 +56,16 @@
   langid = {english}
 }
 
+@book{StatisticalRethinking,
+  title = {Statistical {{Rethinking}}: {{A Bayesian Course}} with {{Examples}} in {{R}} and {{STAN}}},
+  shorttitle = {Statistical {{Rethinking}}},
+  author = {McElreath, Richard},
+  year = {2020},
+  month = mar,
+  edition = {2nd edition},
+  publisher = {{Chapman and Hall/CRC}},
+  address = {Boca Raton London New York},
+  isbn = {978-0-367-13991-9},
+  langid = {english}
+}
 
